package com.desofs.task;

import jakarta.persistence.*;
import java.time.LocalDateTime;
import java.util.UUID;

/**
 * Represents a unit of work belonging to a Project.
 * Domain model fields: id, projectId, title, description, status, assigneeId, createdBy.
 * Soft-delete via {@code deleted} flag (SR-9).
 */
@Entity
@Table(
        name = "tasks",
        indexes = {
                @Index(name = "idx_task_project_id", columnList = "project_id"),
                @Index(name = "idx_task_assignee_id", columnList = "assignee_id")
        }
)
public class Task {

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    private UUID id;

    /** FK to projects.id (Long, matching Project entity). */
    @Column(name = "project_id", nullable = false)
    private Long projectId;

    @Column(nullable = false, length = 255)
    private String title;

    @Column(length = 2000)
    private String description;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private TaskStatus status = TaskStatus.TODO;

    /** FK to users.id – nullable until a member is assigned. */
    @Column(name = "assignee_id")
    private Long assigneeId;

    /** FK to users.id – the user who created the task. */
    @Column(name = "created_by", nullable = false)
    private Long createdBy;

    /** Soft-delete flag (SR-9). Deleted tasks are invisible to queries. */
    @Column(nullable = false)
    private boolean deleted = false;

    @Column(name = "created_at", nullable = false, updatable = false)
    private LocalDateTime createdAt = LocalDateTime.now();

    @Column(name = "updated_at", nullable = false)
    private LocalDateTime updatedAt = LocalDateTime.now();

    public Task() {}

    // ── Getters & Setters ────────────────────────────────────────────────────

    public UUID getId() { return id; }

    public Long getProjectId() { return projectId; }
    public void setProjectId(Long projectId) { this.projectId = projectId; }

    public String getTitle() { return title; }
    public void setTitle(String title) { this.title = title; }

    public String getDescription() { return description; }
    public void setDescription(String description) { this.description = description; }

    public TaskStatus getStatus() { return status; }
    public void setStatus(TaskStatus status) { this.status = status; }

    public Long getAssigneeId() { return assigneeId; }
    public void setAssigneeId(Long assigneeId) { this.assigneeId = assigneeId; }

    public Long getCreatedBy() { return createdBy; }
    public void setCreatedBy(Long createdBy) { this.createdBy = createdBy; }

    public boolean isDeleted() { return deleted; }
    public void setDeleted(boolean deleted) { this.deleted = deleted; }

    public LocalDateTime getCreatedAt() { return createdAt; }

    public LocalDateTime getUpdatedAt() { return updatedAt; }
    public void setUpdatedAt(LocalDateTime updatedAt) { this.updatedAt = updatedAt; }
}